dark mode fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@
     @apply mb-4;
   }
   a {
-    @apply underline underline-offset-4 decoration-emerald-400 hover:bg-emerald-400 hover:text-gray-900 hover:decoration-gray-900 dark:text-emerald-400 dark:hover:text-emerald-300;
+    @apply underline underline-offset-4 decoration-emerald-400 hover:bg-emerald-400 hover:text-gray-900 hover:decoration-gray-900 dark:text-gray-100 dark:decoration-emerald-500 dark:hover:bg-gray-900 dark:hover:text-gray-100 dark:hover:decoration-gray-100;
   }
 }
 
